--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "my-remix-app",
+  "name": "driver-health-checker",
   "private": true,
   "sideEffects": false,
   "type": "module",
   "scripts": {
     "build": "remix vite:build",
-    "deploy": "wrangler deploy",
+    "deploy": "bun run build && wrangler deploy",
     "dev": "remix vite:dev",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
     "start": "wrangler dev",
@@ -39,9 +39,11 @@
     "typescript": "^5.1.6",
     "vite": "^5.1.0",
     "vite-tsconfig-paths": "^4.2.1",
-    "wrangler": "3.84.0"
+    "wrangler": "3.84.0",
+    "@types/bun": "latest"
   },
   "engines": {
     "node": ">=20.0.0"
-  }
+  },
+  "module": "index.ts"
 }
