--- a/package.json
+++ b/package.json
@@ -14,8 +14,13 @@
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-navigation-menu": "^1.2.3",
     "@radix-ui/react-popover": "^1.1.4",
+    "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-tooltip": "^1.1.6",
+    "@radix-ui/react-visually-hidden": "^1.1.1",
     "@remix-run/cloudflare": "^2.15.1",
     "@remix-run/react": "^2.15.1",
     "@remix-run/server-runtime": "^2.15.1",
