--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "deploy": "bun run build && wrangler deploy",
     "dev": "remix vite:dev",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
-    "start": "wrangler dev",
+    "start": "bun run build && wrangler dev",
     "typecheck": "tsc",
     "typegen": "wrangler types"
   },
   "dependencies": {
+    "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-navigation-menu": "^1.2.3",
     "@radix-ui/react-popover": "^1.1.4",
@@ -25,6 +27,7 @@
     "@remix-run/cloudflare": "^2.15.1",
     "@remix-run/react": "^2.15.1",
     "@remix-run/server-runtime": "^2.15.1",
+    "@tanstack/react-table": "^8.20.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
